--- a/.env.local
+++ b/.env.local
@@ -6,8 +6,8 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
-POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=1
 POSTGRES_DB=postgres
+PGDATA=/var/lib/postgres
